--- a/src/css/style.admin.css
+++ b/src/css/style.admin.css
@@ -27,3 +27,9 @@
 .notBlock{
 	display: none;
 }
+
+.dropdown-item:focus, .dropdown-item:hover {
+    color: #FFF;
+    text-decoration: none;
+    background-color: #1ba39c!important;
+}
