--- a/src/css/style.admin.css
+++ b/src/css/style.admin.css
@@ -46,3 +46,9 @@ body {
     text-decoration: none;
     background-color: #1ba39c!important;
 }
+
+.colRol{
+	transition: .3 ease;
+	display: none;
+
+}
